
2.4.7
  b - fixed a bug for when a resource_list has been set, but isn't completely
      initialized, causing a segfault
  b - stop counting down walltime remaining after a job is completed
  b - correctly display the number for tasks as used in TORQUE in qstat -a output
  b - no longer ignoring fread return values in linux cpuset code (gcc 4.3.3)

2.4.6
  f - added an asynchronous option for qsig, specified with -a.
  b - fix to cleanup job that is left in running state after a mom restart
  e - qsub's -W can now parse attributes with quoted lists, for example: 
      qsub script -W attr="foo,foo1,foo2,foo3" will set foo,foo1,foo2,foo3
      as attr's value.
  e - qstat -f now includes an extra field "Walltime Remaining" that tells 
      the remaining walltime in seconds. This field is does not account for
      weighted walltime.
  b - fixed erroneous display of walltime when start time hasn't been set
  b - fixed possible segfault when finding remaining walltime (if the 
      job's resources haven't been defined)
  e - altered the display of walltime remaining so that the xml produced by
      qstat -f stays consistent. Also updated the man page.
  b - split Cray job library and CSA functionality since CSA is dependant on job
      library but job library is not dependant on CSA
  f - added two server parameters: display_job_server_suffix and job_suffix_alias.
      The first defaults to true and is whether or not jobs should be appended
      by .server_name. The second defaults to NULL, but if it is defined it
      will be appended at the end of the jobid, i.e. jobid.job_suffix_alias.
  f - added -l option to qstat so that it will display a server name and an
      alias if both are used. If these aren't used, -l has no effect.
  b - fixed an off by one error for a case in get_correct_jobname
  e - altered the display_job_server_suffix parameter and the job_suffix_alias
      parameter so that they don't interfere with FQDN.